--- a/List/list 5.html
+++ b/List/list 5.html
@@ -12,13 +12,13 @@
 </body>
 <a href="https://lapinozpizza.in"><strong>Pizza</strong><br> <img src="../image/pizza.webp" alt="" width="300px" height="200px"></a><br>     </a> 
 <hr>
-<a href="https://www.burgerking.in"><strong>Burger</strong> <br><img src="../image/Burger.jfif" alt="" width="300px" height="200px"></a><br>  <a href="https://www.burgerking.in"></a>  
+<a href="https://www.burgerking.in"><strong>Burger</strong> <br><img src="../image/Burger.jfif" alt="" width="300px" height="200px"></a><br>  </a>  
 <hr>
-<a href="https://www.themomoking.com"><strong>Momos</strong><br> <img src="../image/chicken-momo-1.webp" alt="" width="300px" height="200px"></a><br>  <a href="https://www.themomoking.com"></a>
+<a href="https://www.themomoking.com"><strong>Momos</strong><br> <img src="../image/chicken-momo-1.webp" alt="" width="300px" height="200px"></a><br>  </a>
 <hr>
-<a href="https://online.kfc.co.in"><strong>KFC</strong><br> <img src="../image/KFC.avif" alt="" width="300px" height="200px"></a><br>   <a href="https://online.kfc.co.in"></a>     
+<a href="https://online.kfc.co.in"><strong>KFC</strong><br> <img src="../image/KFC.avif" alt="" width="300px" height="200px"></a><br>   </a>     
 <hr>
-<a href="http://www.starbucks.com"><strong>Cofee</strong><br> <img src="../image/cofee.jpeg" alt="" width="300px" height="200px"></a><br>   <a href="http://www.starbucks.com"></a>   
+<a href="http://www.starbucks.com"><strong>Cofee</strong><br> <img src="../image/cofee.jpeg" alt="" width="300px" height="200px"></a><br>  </a>   
 
 </body>
 </html>
