--- a/List/list 6.html
+++ b/List/list 6.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Gujarat Tourisum....</h1>
+    <div><h1>Gujarat Tourisum....</h1></div>
     <hr>
     <a href="https://www.girlionsafari.com/"><strong><h2>Sasan gir</h2> </strong> <br><img src="../image/sasan gir.jfif" alt="" width="400px" height="200px"></a><br>
     <hr>
