--- a/Project/iframe/Project 1.html
+++ b/Project/iframe/Project 1.html
@@ -9,7 +9,7 @@
 <body>
     <table  width="100%" height="600">
         <tr>
-            <td width="15%" style="background-color: rgb(73, 123, 73); text-align: center;" ><img src="../image/logo for html.png" alt="" width="100" height="100"></td>
+            <td width="15%" style="background-color: rgb(73, 123, 73); text-align: center;" ><img src="" alt="" width="100" height="100"></td>
             <td width="40%" style="background-color: rgb(52, 180, 137);text-align: center;"><h1>Dax html Projects</h1></td>
             <td width="10%" style="background-color: rgb(148, 148, 56);text-align: center;"><h1>Home</h1></td>
             <td width="10%" style="background-color: rgb(71, 71, 90);text-align: center;"><h1>About</h1></td>
